<resources>
    <string name="app_name">My Mini Twitter</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_sign_up">Register</string>
    <string name="text_create_account">Create account</string>
    <string name="text_return_login">Go to Login</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_prueba">PruebaActivity</string>
    <string name="home_title">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tweet_button">Tweet</string>
    <string name="hint_new_tweet">What is happening?</string>
    <string name="cancel_tweet_message">Are you sure you want to cancel your tweet? Message will be deleted</string>
    <string name="cancel_tweet">Cancel Tweet</string>
    <string name="delete_tweet_button">Delete</string>
    <string name="cancel_tweet_button">Cancel</string>
    <string name="delete_tweet_title">Delete Tweet</string>
</resources>
